# fileglide

./: .gitignore  LICENSE  README.md  pyproject.toml
.skill/fileglide/: SKILL.md
.skill/fileglide/references/: workflow-and-pitfalls.md
docs/: fileglide-architecture.html
fileglide/: __init__.py  __main__.py  app.py  exceptions.py  executor.py  facade.py  main.py  models.py  runtime.py  serializers.py
fileglide/commands/: __init__.py  batch.py  common.py  file.py  inspect.py  path.py  root.py  text.py  tree.py
fileglide/services/: __init__.py  batch.py  binary.py  encoding.py  filesystem.py  scope.py  search.py  sizing.py  text.py  traversal.py
i18n/: README.zh-CN.md  README.zh-TW.md
openspec/changes/archive/2026-06-08-build-fileglide-agent-cli/: design.md  tasks.md
openspec/changes/build-fileglide-agent-cli/: proposal.md  tasks.md
openspec/changes/build-fileglide-agent-cli/specs/batch-execution-and-json-output/: spec.md
openspec/changes/build-fileglide-agent-cli/specs/content-read-write-editing/: spec.md
openspec/changes/build-fileglide-agent-cli/specs/encoding-and-binary-compatibility/: spec.md
openspec/changes/harden-agent-text-editing-and-encoding/: design.md  proposal.md  tasks.md
openspec/specs/batch-execution-and-json-output/: spec.md
openspec/specs/content-read-write-editing/: spec.md
openspec/specs/encoding-and-binary-compatibility/: spec.md
openspec/specs/filesystem-entry-operations/: spec.md
openspec/specs/search-and-matching/: spec.md
tests/: conftest.py  test_cli.py
(+5 files in other folders)
