[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fileglide"
version = "0.1.0"
description = "Agent-oriented CLI for structured filesystem, text, and binary workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "charset-normalizer>=3.4.7",
    "click>=8.4.1",
    "vortezwohl>=0.1.3",
]

[project.scripts]
fileglide = "fileglide.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"