[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fileglide"
version = "0.0.1"
description = "Agent-oriented CLI for structured filesystem."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "charset-normalizer>=3.4.7",
    "click>=8.4.1",
    "vortezwohl>=0.1.3",
]

[project.scripts]
fileglide = "fileglide.main:main"
